 * Added 'Save for Later' button to deposit screen, fixing #3071
 * Added a note to Saved searches screen to indicate how to create a Saved
    Search, fixing #2999
 * Strip namespacing from HTML exports (fixes <emph> in citations) under
    LibXML, fixing #3085
 * Strip prefixes from noxmlns to_string output (bug fix for XML::LibXML),
    fixing #3007

2007-12-12 tdb
 * 'x' and 'y' values will now sort correctly (along with ~n, 'e etc.), fixing
    #2944
 * Changed is_dom back to not use ->isa, due to inheritance problems in
    trim_whitespace under LibXML, fixing #3159

2007-12-12 cjg
 * generate_static now compiles the contents of files into auto.css, rather 
    than it just containing @import lines. This improves the load time of 
    page.

2007-12-14 tdb
 * Don't render an Itemref field link inside a link, because it's always going
    to be linked itself, fixing #3189
 * The main repository hostname can now be unqualified (to allow 'localhost'),
    fixing #3184
 * Fixed double-escaping of URLs in document citations, fixing #3113

2007-12-19 tdb
 * Session::render_link shouldn't URI escape (should be HTML escaping, which
    the DOM library will do for us), fixing #3197
 * Added methods to parse XML direct from a URL
 * Added 'pid' configuration to Import::DOI, removed use of wget, fixing #3193
    and #2854, and part of #2820

2007-12-20 tdb
 * Removed temporary file usage from PubMedID import script, fixing #2820

2008-01-09 tdb
 * Changed name of ordervalue_single to ordervalue_basic, fixing #3201
 * Added $session and $langid to call to ordervalue_basic, really fixing #3201

2008-01-11 tdb
 * import_subjects should use the import ids, fixing #3209

2008-01-14 tdb
 * fixed typo in [3070], fixing #3210

2008-01-14 tdb
 * Use Text::Unidecode to create sort values, fixing #3200
 * EPrints::Metafield::render_value_withopts now checks definedness by using
    EPrints::Utils::is_set, fixing #2923
