@@ -6614,4 +6614,6 @@ PACKAGE: 2.2.99.2
  * Use Text::Unidecode to create sort values, fixing #3200
  * EPrints::Metafield::render_value_withopts now checks definedness by using
     EPrints::Utils::is_set, fixing #2923
+ * Added check for whether the subjects field is configured in MODS (METS)
+    export
 
